helloworld/01-hello-world/01-hello-world-ingress-egressIP.yaml
#
# Example: Hello World.
# Create the Deployment 3 pods.
# Create the Service
# Create the Nginx Ingress hello.192-168-31-101.sslip.io
# Create the Antrea EgressIP 192.168.31.101 
#

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
#  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-world
        team: rocket
    spec:
      restartPolicy: Always
      containers:
      - image: rancher/hello-world
        imagePullPolicy: Always
        name: hello-world
        ports:
        - containerPort: 80
          protocol: TCP
          name: http

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: hello-world
#  namespace: prod
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
#  namespace: prod
spec:
  rules:
  - host: hello.192-168-31-101.sslip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world
            port:
              number: 80
